--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.org.springframework=info
+logging.level.org.springframework=debug
 #spring.h2.console.enabled=true
 management.endpoints.web.exposure.include=*
 #spring.datasource.url=jdbc:h2:mem:testdb
@@ -13,3 +13,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.security.user.name=username
 spring.security.user.password=password
 #docker run --detach --env MYSQL_ROOT_PASSWORD=dummypassword --env MYSQL_USER=social-media-user --env MYSQL_PASSWORD=dummypassword --env MYSQL_DATABASE=social-media-database --name mysql --publish 3308:3306 mysql:8-oracle
+
+#mysqlsh \connect social-media-user@localhost:3306 \sql use social-media-database select * from user_details; select * from post; \quit
